modify Steins;Gate --> STEINS;GATE

--- a/steins_gate_0/docs/0040.md
+++ b/steins_gate_0/docs/0040.md
@@ -44,7 +44,7 @@
 这种话题铃羽不觉得年仅10岁的篝能理解，所以她也没有深入说明的打算。  
 “而且，公元2000年是一个特殊的年份。好像所有的世界线收束成了一个。  
  以此为关联，这个问题说不定会严重影响各条世界线因果。  
- 我们作为目标的‘处于缝隙的世界线’——*Steins;Gate*，也不例外。”  
+ 我们作为目标的‘处于缝隙的世界线’——STEINS;GATE，也不例外。”  
 铃羽把视线转向连接着IBN5100的手机终端。  
 “所以这是为了防止‘千年虫问题’的修正程序哦。”  
 现在，她正在将修正程序转换成IBN5100专用语言。之后，再把这个程序以病毒的形式在全世界扩散，就能完全解除这个时代的工程师忽略的“千年虫问题”。
@@ -53,7 +53,7 @@
 听说这个时代的日本，ADSL线路还处于测试阶段，一般用户的网络环境应该是使用ISDN的低带宽网络拨号。但是类似秋叶原周边的大城市地区的大学和研究所，或者是PC相关企业的中心，已经配备了可持续连接的光纤宽带线路，其中有些设施甚至已经开始使用无线局域网了。铃羽侵入了其中一处。爸爸曾经嗤笑，在2036年的技术面前，20世纪末的网络防火墙就像纸一样。事实上也的确是这样。  
 “但、但是……如果改变了未来，篝和大家在一起的未来世界……也会完全改变的吧……？”  
 令人意外的是，篝好像粗略地理解了刚才铃羽所说的话。  
-“没错。不会让那种世界存在了。我们就是为了通往*Steins;Gate*才来到了这里。”  
+“没错。不会让那种世界存在了。我们就是为了通往STEINS;GATE才来到了这里。”  
 “……”  
 
 突然，篝脸上不安的表情沉了下来。仿佛灵魂出窍一般，她缓慢地睁大了眼，面无表情。  
