--- a/steins_gate_0/docs/0048.md
+++ b/steins_gate_0/docs/0048.md
@@ -15,7 +15,7 @@
  如果我在你身边，我说不定，会再一次背叛你……  
  呐……  
  希望你能听一下这样的我的，任性的请求。  
- 请一定……要找到 *Steins;Gate*……  
+ 请一定……要找到STEINS;GATE……  
  在你被抓的这段时间里，世界发生了翻天覆地的变化……  
  真由理小姐和铃羽小姐都下落不明。  
  我和篝小姐，为了救你闯进了STRATFO的基地……  
@@ -25,7 +25,7 @@
  这些事不该发生的……  
  不过，现在，你是唯一的希望。  
  求求你。虽然知道把一切托付给你一个人很过分……  
- 请一定要到达 *Steins;Gate*。  
+ 请一定要到达STEINS;GATE。  
  就说到这吧……冈部先生。  
  永别了——”  
 
@@ -61,7 +61,7 @@
 “呐，桶子……我……我啊……  
  我想普通地生活……这也不被允许么……？  
  这种事情我早就有所觉悟了……  
- 放弃 *Steins;Gate* 而选择了第三次世界大战这条世界线的，是我啊……  
+ 放弃STEINS;GATE而选择了第三次世界大战这条世界线的，是我啊……  
  但就算这样……只有我活着，而大家全都离我而去什么的……  
  这也太过分了吧……（失声）”  
 神的法则，无论如何也不肯放过我吗……  
