--- a/steins_gate_0/docs/0000.md
+++ b/steins_gate_0/docs/0000.md
@@ -1,5 +1,5 @@
 # <center> 命运石之门0 游戏文本 </center>
-## <center> Steins; Gate 0 game text </center>
+## <center>STEINS;GATE 0 game text </center>
 
 ![](../pics/0000-1.png)
 
@@ -89,7 +89,7 @@
 真由理：“冈伦他，明明没有期望过这个……  
  而且我觉得，就算是再尝试一次，也只会继续让冈伦受伤……  
  让一个人来改变未来这种事，肯定是办不到的啊……”  
-铃羽：“所以说，为此才有这**Steins;Gate（命运石之门）**……  
+铃羽：“所以说，为此才有这**STEINS;GATE（命运石之门）**……  
  你的心情我明白。但是啊，我也是从未来，来到这里的啊。  
  不论如何我也回不去2036年了，所以我不会就这么放弃的。”  
 真由理：“……”  
