--- a/steins_gate_0/docs/0013.md
+++ b/steins_gate_0/docs/0013.md
@@ -75,7 +75,7 @@
 “要关门了！”  
 舱门开始慢慢关闭。机内和机外，正在彻底隔绝成两个世界。不管铃羽的任务是否能够成功，这以后大概，再也不会相见了吧。  
 “铃羽酱，篝她就真的拜托了啊！  
- 还有，记得告诉冈伦！*Steins;Gate* 一定存在！”  
+ 还有，记得告诉冈伦！STEINS;GATE一定存在！”  
 “‘绝对不能放弃啊你个混蛋！’这样告诉他！”  
 “*Okey-dokey!* ”  
 接着，舱门彻底封闭。外面的混乱，还有真由姐与父亲最后的叮咛，都消失了。  
