--- a/steins_gate_0/docs/0049.md
+++ b/steins_gate_0/docs/0049.md
@@ -8,7 +8,7 @@
 
 No.001依旧处于沉睡状态，本体一直处于STARTFO监管下，与2025年去世；  
 No.003自2011年失踪，至今下落不明；  
-*Steins;Gate* 达成条件未探明。  
+STEINS;GATE达成条件未探明。  
 
 ---
 最终作战概要  
@@ -20,7 +20,7 @@ No.003自2011年失踪，至今下落不明；
 
 <div align="right"> ——No.002 巴莱尔·提托 </div>  
 
-（我一个人没办法弄懂如何到达 *Steins;Gate*。我能做的只有复现我所知道的历史达成闭环，让希望不会断绝。我相信，凤凰院凶真一定迟早有一天会和我们一起……不，不对，是站在我们的前阵，指引我们。）  
+（我一个人没办法弄懂如何到达STEINS;GATE。我能做的只有复现我所知道的历史达成闭环，让希望不会断绝。我相信，凤凰院凶真一定迟早有一天会和我们一起……不，不对，是站在我们的前阵，指引我们。）  
 
 
 ![](../pics/0049-1.png)
