--- a/steins_gate_0/docs/0038.md
+++ b/steins_gate_0/docs/0038.md
@@ -124,9 +124,9 @@
 “不-不-不——”  
 真由理不知为何显得很得意的样子，左右摇动着食指。  
 “不是的哦~这个啊，虽然是绿色的乌帕先生，但是和普通的不一样的！  
- 是在之前放映的电影中登场的‘绿色的妖精先生乌帕’哟！”  
+ 是在之前放映的电影中登场的‘森之妖精先生乌帕’哟！”  
 说起来，《雷NET翔》的剧场版在春季上映了呢。真由理也混在小孩子当中去看了吧？  
-“绿色的妖精先生？”  
+“森之妖精先生？”  
 “剧透电影的情节也没关系吧？”  
 “没事，反正不会看的。”  
 “那个，这次的电影啊，是在虚拟世界中与邪恶的超级黑客先生们战斗。  
@@ -136,7 +136,7 @@
  其实，那些妖精先生们，是翔君在照顾的学校花坛的花儿们哦~
  为了拯救一直都温柔地照顾它们的翔君，  
  在虚拟世界‘皮卡皮卡~’地放着光与乌帕合体了！
- 那就是这个‘绿色的妖精先生乌帕’！超级可爱，超级强大的哟~
+ 那就是这个‘森之妖精先生乌帕’！超级可爱，超级强大的哟~
  真由喜好感动啊~对这类剧情没辙呢~导演先生真是天才啊~”
 “原、原来如此啊。”  
 能让真由理这么热衷地诉说的事情实在少有。的确仔细看的话，能发现真由理拿着的乌帕和普通的绿色乌帕在设计上稍微有些区别。因为不怎么了解乌帕，哪里有什么不一样……要是被这么问的话还是一头雾水的。  
