--- a/steins_gate_0/docs/0038.md
+++ b/steins_gate_0/docs/0038.md
@@ -10,14 +10,14 @@
 正在咖啡店看书时，手机响起了RINE的消息提示音。  
 
 『嘟嘟噜~♪现在在哪？』  
-![](../pics/0038-1.png)  
+![](../pics/emojis/Okarin-hecha.png)  
 『啊，老地方的咖啡店啊  
-&emsp;刚才去了冈伦的家，你不在』  
-「去了啊，老爸没有给你添麻烦吧？」  
+ 刚才去了冈伦的家，你不在』  
+「你去我家了啊，老爸没有给你添麻烦吧？」  
 『没有哟，还款待了麦茶  
-&emsp;有些不得不买的东西，能陪我吗？』  
-![](../pics/0038-2.png)  
-![](../pics/0038-3.png)  
+ 我有些必须要买的东西，能陪我吗？』  
+![](../pics/emojis/Okarin-OK.png)  
+![](../pics/emojis/Faris-thanks.png)  
 『那我现在就过去，在那等我哦』  
 
 那家伙，去过我家了啊……  
@@ -67,7 +67,7 @@
 “……那么，作为补偿下次会送你礼物的。”  
 “真的？好开心呐！”  
 
-![](../pics/0038-4.png)  
+![](../pics/0038-1.png)  
 
 大致地转了一圈卖场，用于POP的材料种类相当的多。我尽量不出声，让真由理按自己的品味选择。真由理花了相当长的时间，仔细地斟酌着该买哪个好。只是，因为平时在 *MayQueen+Nyan²* 的原因吗，真由理的品味该怎么说呢……偏向于萌系的方向。交给真由理应该没什么危险吧……尽管这么说，被拜托的是真由理，所以我出手干涉也不对吧。这里就放开胸襟，全部交给真由理吧。因此，我就在卖场随便地转悠着等待真由理买完东西……这时又接到了“红莉栖”的电话。  
 “怎么了吗？”  
@@ -114,7 +114,7 @@
 “诶嘿嘿~~”  
 真由理一副高兴至极的样子注视着手上的钥匙圈。  
 
-![](../pics/0038-5.png)
+![](../pics/0038-2.png)
 
 这是《雷NET翔》中登场的吉祥物角色“乌帕”。我让真由理在动漫周边卖场等待的时候随便选个喜欢的东西，于是她拿了这个。  
 “乌帕的话，明明已经有了很多了……还是这么高兴啊。  
