--- a/steins_gate_0/docs/0002.md
+++ b/steins_gate_0/docs/0002.md
@@ -10,11 +10,9 @@
 &emsp;很期待是怎样的研讨会呢  
 &emsp;真由喜也想看看啊~』  
 「对你来说可能太难了」  
+![](../pics/emojis/Mayuri-wuyu.png)  
 『说的也是呢~那么，就不打扰你啦，再见~~』  
-字里行间都充斥着真由理那无忧无虑的风格啊。  
-多亏了她，15分钟感觉也没那么难过了。  
-
-![](../pics/0002-1.png)
+字里行间都充斥着真由理那无忧无虑的风格啊。多亏了她，15分钟感觉也没那么难过了。  
 
 前台上，堆着分发给研讨会参加者的小册子和宣传单，还有资料的折叠传单。  
 《疑似科学的系谱和中钵论文》，这是井崎准教授的研讨会宣传册。  
@@ -36,7 +34,7 @@
 我像是逃一样的离开了那里，寻找另外的空位。  
 几乎就在我坐下的同时，雷斯吉宁教授和比屋定真帆出现在了讲台上。  
 
-![](../pics/0002-2.png)
+![](../pics/0002-1.png)
 
 现场一下子爆发了热烈的掌声。但是看到随后出现的较小少女，掌声变成了窃窃私语。对于比屋定真帆来说，这种反应想必是意料之中吧。她带着平常的表情站在教授旁边。  
 教授拿着话筒环视现场的样子，看起来相当的老练。  
@@ -163,7 +161,7 @@
 “我有异议！”  
 “诶？！”  
 
-![](../pics/0002-3.png)
+![](../pics/0002-2.png)
 
 在讲台上的两人，以及现场所有的听众，都一齐看向突然发作的我。  
 “都不去试试，能明白些什么？  
@@ -204,7 +202,7 @@
  接下来，会有比我更优秀的翻译登场。  
  这就是，我们小组，现在最为用心进行的第二个项目——”  
 
-![](../pics/0002-4.png)
+![](../pics/0002-3.png)
 
 
 <br/>
