--- a/steins_gate_0/docs/0052.md
+++ b/steins_gate_0/docs/0052.md
@@ -92,7 +92,7 @@
 「你在说什么啊」  
 『呀，我在玩黄游，里面出现了这个选项  
 &emsp;所以在想，如果是冈伦会选什么颜色』  
-「 ![](../pics/0052-1.png) 」  
+![](../pics/emojis/Okarin-ha.png)  
 『呃，其实我最想问的是真由喜和琉华氏还有菲莉丝碳他们的想法』  
 「她们会叫警察来抓你的」  
 『对吧  
