--- a/steins_gate_0/docs/0024.md
+++ b/steins_gate_0/docs/0024.md
@@ -153,7 +153,7 @@
  两个人待会不出去玩玩吗？难得的平安夜呢。  
  工作都放一边，去吃点东西吧！  
  还是说，有先约了呢？”  
-“教授，nice！  
+“教授，nice！”  
 “嗯……？”  
 比屋定像是被打垮了，变回一幅认命的表情；“红莉栖”则是因为接到了绝佳的助攻而兴奋地叫出声来，弄得雷斯吉宁教授一脸疑惑。于是我只能负担起解释的角色：  
 “那个，教授？我的朋友们一会儿会开圣诞派对，可以的话请一起——”  
