--- a/steins_gate_0/docs/0062.md
+++ b/steins_gate_0/docs/0062.md
@@ -17,7 +17,7 @@
  就是，冈部先生，说过很多人脑还有记忆什么的，很难的话题……”  
 “不管怎么样都可以！只要有办法能让我找回自己的话！”  
 “等、等一下，我的确有说过那种话，但我只是对这方面有兴趣而已，并不知道什么专业的知识……”  
-我只是知道脑的功能和构造的程度，也知道关于记忆丧失是什么意思。但是如果突然问我找回记忆的方法，那就是另一回事了。就算有最高级的医疗设施也做不到吧？若是像『Amadeus』一样，把记忆事先存到了其他地方的话倒是另当别论。  
+我只是知道脑的功能和构造的程度，也知道记忆丧失的字面意思。但是如果突然问我找回记忆的方法，那就是另一回事了。就算有最高级的医疗设施也做不到吧？若是像『Amadeus』一样，把记忆事先存到了其他地方的话倒是另当别论。  
 “这……样啊……”  
 对于我的回答，女性显然很失望。  
 “既、既然这样，有什么可以调查身世的方法呢，加奈好像真的非常痛苦……”  
