--- a/steins_gate_0/docs/0002.md
+++ b/steins_gate_0/docs/0002.md
@@ -7,8 +7,8 @@
 『嘟嘟噜~冈伦~研讨会的准备还顺利吗？』  
 「啊啊，没问题」  
 『是吗？真好呢~  
-&emsp;很期待是怎样的研讨会呢  
-&emsp;真由喜也想看看啊~』  
+ 很期待是怎样的研讨会呢  
+ 真由喜也想看看啊~』  
 「对你来说可能太难了」  
 ![](../pics/emojis/Mayuri-wuyu.png)  
 『说的也是呢~那么，就不打扰你啦，再见~~』  
