--- a/steins_gate_0/docs/0014.md
+++ b/steins_gate_0/docs/0014.md
@@ -63,7 +63,7 @@
 「那是个，开满了通往新世界的商店的地方」  
 『等等，我这就去查』  
 「你还是别查了。一入腐界深似海啊。。。  
-&emsp;如果有了在意的事，我会报告的」  
+ 如果有了在意的事，我会报告的」  
 『那就拜托你了哦~虽说我觉得那很累的』  
 
 “诶嘿嘿~~”  
