--- a/steins_gate_0/docs/0023.md
+++ b/steins_gate_0/docs/0023.md
@@ -189,13 +189,13 @@ nüer……nǚér……女儿？
 和刚才的话题相比，还更不能让人听到的程度吗？  
 「地下兼职，是你很得意的黑客技术之类的吗？」  
 『嘛，就是那么回事  
-&emsp;虽然这样说，我们小组也不全都是干些违法的工作  
-&emsp;给厂商和银行搭建线上系统，还有服务器的构建和运维一类平常的工作也在做  
-&emsp;还有解析病毒然后制作杀毒软件，还原重要数据和开发新型加密技术什么的」  
+ 虽然这样说，我们小组也不全都是干些违法的工作  
+ 给厂商和银行搭建线上系统，还有服务器的构建和运维一类平常的工作也在做  
+ 还有解析病毒然后制作杀毒软件，还原重要数据和开发新型加密技术什么的」  
 「也就是……所谓的SE（软件工程师）吗？」  
 『还没有专业到那种地步啦  
-&emsp;但是我们姑且还是个在业界小有名气，会从世界各地接到委托的小组哦  
-&emsp;我的称号则是叫做“DaSH”』  
+ 但是我们姑且还是个在业界小有名气，会从世界各地接到委托的小组哦  
+ 我的称号则是叫做“DaSH”』  
 「这是什么的缩略？」  
 『这我就不能说了』  
 「为什么？」  
@@ -213,46 +213,46 @@ nüer……nǚér……女儿？
 “我知道了……”  
 小声嘟哝了一句以后，桶子又开始在RINE上发起了信息。  
 『就是最近，兼职的地方拿到了笔记本电脑和硬盘  
-&emsp;都被很严密地全盘加密了，现在处于被锁住没有密码就无法启动的状态  
-&emsp;当然，把硬盘取出来放在别的电脑上也是没有办法读取的  
-&emsp;客户已经找过很多公司，貌似都没办法的样子。于是就被介绍到我们这儿来了』  
+ 都被很严密地全盘加密了，现在处于被锁住没有密码就无法启动的状态  
+ 当然，把硬盘取出来放在别的电脑上也是没有办法读取的  
+ 客户已经找过很多公司，貌似都没办法的样子。于是就被介绍到我们这儿来了』  
 「那么厉害的加密么？我听说就算是全盘加密，这方面的专家也是可以解除的」  
 『但是对于这个，我只能说完全不可能  
-&emsp;要问为什么的话，因为这个加密软件是我们写的』  
+ 要问为什么的话，因为这个加密软件是我们写的』  
 「哈？你们写的？那样的话，你们自己还能解不开吗？」  
 『我们想的是，既然要加密，如果不到类似做不出解毒剂的毒药那种水平就没意义了』  
 「也就是说你们也没有解密的方法？明明是自己做出来的东西？」  
 『Exactly  
-&emsp;如果我们能解谜的话，那也就是说，  
-&emsp;和我们同样级别的黑客也都可以的吧？那样的怎么看都不行吧常考』  
+ 如果我们能解谜的话，那也就是说，  
+ 和我们同样级别的黑客也都可以的吧？那样的怎么看都不行吧常考』  
 「原来如此」  
 『“超级嗨客乙”什么的，不准说！ヽ(`Д´)ﾉ』  
 「我还没说吧喂！  
-&emsp;不过，这和红莉栖有什么关系吗？」  
+ 不过，这和红莉栖有什么关系吗？」  
 『笔记本电脑和硬盘的原主人就是  
 牧濑红莉栖』
 什么……？  
 红莉栖的……遗物的意思么？  
 差点被直接开口问桶子的冲动所支配，好不容易还是忍住了。  
 『因为客户的表现还是有点可疑  
-&emsp;于是就试着访问了一下电脑厂商那边记录的用户数据  
-&emsp;至于怎么访问的就不要问了  
-&emsp;然后就发现记录上是牧濑氏的名字  
-&emsp;住址什么的也已经确认过了，就是本人没错』  
+ 于是就试着访问了一下电脑厂商那边记录的用户数据  
+ 至于怎么访问的就不要问了  
+ 然后就发现记录上是牧濑氏的名字  
+ 住址什么的也已经确认过了，就是本人没错』  
 「拿电脑到你那边去的客户是谁？红莉栖的电脑为什么会在他们手上？」  
 『抱歉。按规定不能说的』  
 「是俄罗斯人吗？」  
 『哈？并不是。为什么是俄罗斯？和中钵有关？』  
 「没，不是的话就没事了  
-&emsp;于是，你想从我这知道什么？」  
+ 于是，你想从我这知道什么？」  
 『线索之类的吧  
-&emsp;你知道有什么牧濑氏可能会用作密码的短语吗？  
-&emsp;暴力破解是不可能的。也就是说，只能通过笨办法来找了  
-&emsp;和牧濑氏有关的纪念日，住址还有电话号码之类的全部都试过了  
-&emsp;嘛，虽然知道她肯定不会用那么简单的密码就是了  
-&emsp;其他方面的话，脑科学相关的常用单词，她发表的论文里频繁出现的词语，  
-&emsp;这些数据也已经收集完成了  
-&emsp;现在正在收集和私人生活有关的关键词』  
+ 你知道有什么牧濑氏可能会用作密码的短语吗？  
+ 暴力破解是不可能的。也就是说，只能通过笨办法来找了  
+ 和牧濑氏有关的纪念日，住址还有电话号码之类的全部都试过了  
+ 嘛，虽然知道她肯定不会用那么简单的密码就是了  
+ 其他方面的话，脑科学相关的常用单词，她发表的论文里频繁出现的词语，  
+ 这些数据也已经收集完成了  
+ 现在正在收集和私人生活有关的关键词』  
 呼……  
 有一种重要的故人被挖坟了一样的感觉。  
 而且，和红莉栖私人生活有关的关键词能想起来些什么呢？  
