--- a/steins_gate_0/docs/0060.md
+++ b/steins_gate_0/docs/0060.md
@@ -1,6 +1,6 @@
 > <big> **亡失流转的寂寥 - 10** </big>  
 > 1.064750  
-> [ 2010/12/20 ] 初见雷耶丝，跟踪者并不是她。真帆到LAB参观，冈伦继续拜托萌郁找人。冈伦厌恶自己对“红莉栖”的依存，依旧保持断联。  
+> [ 2010/12/20 ] 初见雷耶丝，跟踪者并不是她。比屋定到LAB参观，冈伦继续拜托萌郁找人。冈伦厌恶自己对“红莉栖”的依存，依旧保持断联。  
 
 “……”  
 “冈伦，发生了什么事？”  
