--- a/steins_gate_0/docs/0061.md
+++ b/steins_gate_0/docs/0061.md
@@ -1,6 +1,6 @@
 > <big> **亡失流转的寂寥 - 11** </big>  
 > 1.064750  
-> [ 2010/12/23 ] 圣诞节不办party了，改为新年party。琉华子带陌生失忆女性来LAB找冈伦求助，女性长得非常像红莉栖。  
+> [ 2010/12/23 ] 圣诞节不办派对了，改为新年派对。琉华子带陌生失忆女性来LAB找冈伦求助，女性长得非常像红莉栖。  
 
 从桐生萌郁那里听到关于椎名篝的报告之后，又过了几天。昨晚确认了一下，据说那之后的调查就没有新进展了。桐生萌郁也有杂志社的校对工作，没有太多时间吧。虽然对寻找椎名篝的家伙感到不安，但也不能让她把原来的业务放下，优先忙这边的事情吧。  
 “哈呜~真由喜非常伤心……”  
