--- a/steins_gate_0/docs/0062.md
+++ b/steins_gate_0/docs/0062.md
@@ -1,6 +1,6 @@
 > <big> **亡失流转的寂寥 - 12** </big>  
 > 1.064750  
-> [ 2010/12/23 ] 琉华子加借住的失忆女性居然就是失踪已久的篝！与铃羽真由理相认。
+> [ 2010/12/23 ] 铃羽发现，琉华子加借住的失忆女性居然就是失踪已久的篝。  
 
 我惊讶地看向女性，想要再进一步确认。  
 “记忆……丧失？”  
