--- a/steins_gate_0/docs/0059.md
+++ b/steins_gate_0/docs/0059.md
@@ -1,6 +1,6 @@
 > <big> **亡失流转的寂寥 - 09** </big>  
 > 1.064750  
-> [ 2010/12/20 ] 真帆被神秘人袭击，打电话给冈伦求助。萌郁调查到有其他人也在找篝。  
+> [ 2010/12/20 ] 比屋定被神秘人袭击，打电话给冈伦求助。萌郁调查到有其他人也在找篝。  
 
 【琦玉县和光市，脑科学综合研究机构·日本办公室准备室】  
 
@@ -72,7 +72,7 @@
 【LAB·未来道具研究所】
 
 “这个是……？”  
-接过默不出声的桐生萌郁递过来的纸张，我提出询问。  
+我接过默不出声的桐生萌郁递过来的纸张，提出询问。  
 就在十分钟前，桐生萌郁联络桶子说正往LAB过来。然后如她所说地出现在了这里。可以认为她发来联络的时候就已经到附近了。如果谁都不在的话，她会怎么办呢？  
 “……报告书。”  
 看来这上面记录了至今为止的调查结果。我接过一叠纸的手略微颤抖着。面对桐生萌郁的不安，仍或多或少地残留在我心中。即使这样，大概是在接到联络后马上服用的精神安定剂起作用了，与前几天相比已经好了很多了。  
