--- a/steins_gate_0/docs/0063.md
+++ b/steins_gate_0/docs/0063.md
@@ -1,6 +1,6 @@
 > <big> **轨道秩序的日蚀 - 01** </big>  
 > 1.064750  
-> [ 2010/12/23 ] 篝与铃羽相认，继续借住在琉华子家，与真由理关系迅速拉近。  
+> [ 2010/12/23 ] 篝与铃羽相认，与真由理关系迅速拉近。冈伦拜托琉华子让篝继续借，并尽量不要让她离开神社；与萌郁联系，得知其他追查篝的人可能来头不小，摆脱萌郁继续追查。  
 
 “呼……”  
 “怎么样了？”  
@@ -133,6 +133,27 @@
 “当然了哦！是吧，琉华君？”  
 “嗯！一起party吧。”  
 三个人凑在一起，女孩子们——虽然有一个是男的——已经迅速开始了话题。  
+
+我这边也有这边要做的事。首先是——必须把篝已找到这件事告诉桐生萌郁。我掏出手机开始在RINE上编辑消息。是那个桐生萌郁的话，肯定会马上回复——  
+「椎名篝找到了」  
+『真的！？在哪找到的？』  
+「她现在住在朋友家的神社里。  
+ 据说她之前倒在了千叶县境附近的山道上。  
+ 可是，她失去了记忆」  
+『在那么近的地方？真吃惊！  
+ 我这边后来也在调查那群在找椎名篝的家伙。  
+ 完全打探不到消息，说不定，对手可能相当强大』  
+「拜托你继续这方面的追查」  
+![](../pics/emojis/Okarin-OK.png)
+
+桐生萌郁那边就先这样吧。但是……还是很在意那群在找篝的家伙，还有发现篝时她昏倒的事，她为什么会昏倒在那种山里？而且，手中仅有一个她最珍惜的乌帕。难不成，篝是从什么人的手下逃出来的？  
+“琉华子，我有事想跟你说。”  
+“好……什么事？”  
+“能不能尽量让篝不要离开神社？”  
+“诶？为什么……呢？”  
+“不要问理由。拜托了。”  
+“好……我明白了。既然冈部先生这么说的话。”  
+小心驶得万年船，没事的话就再好不过了。一切都会在篝恢复记忆后解明，虽然没人知道要到什么时候。  
 
 
 <br/>
