--- a/steins_gate_0/docs/0041.md
+++ b/steins_gate_0/docs/0041.md
@@ -1,6 +1,6 @@
 > <big> **私秘境里的圣痕 - 05** </big>  
 > 1.129954  
-> [ 2011/06/月末 铃羽视角 ] 篝为了找回挂坠在LAB袭击了铃羽。  
+> [ 2011/06/月末 铃羽视角 ] 篝为了找回乌帕钥匙圈在LAB袭击了铃羽。  
 
 铃羽没有一个晚上不想到篝。来到这个时代之后已经找了她一段时间了，结果没有任何线索。然而——现在应该已经22岁的椎名篝，毋庸置疑就在秋叶原。铃羽确信着这一点。  
 就算再怎么想也没有用。铃羽转换心情，环视整个房间。身为父亲的桥田至一如既往地玩着登场人物全是女孩子的游戏。他半张着嘴，一幅呆呆的表情，一边挠着从衣服里面流出来的赘肉，一边操作着。这幅样子，不论作为父亲还是作为一个人类，都让人不太想尊敬。  
@@ -65,7 +65,7 @@
 “不是真由姐的吗？”  
 把脸凑近好好观察了一下——脑海中浮现出强烈的既视感。
 “这个乌帕，好像在哪里……？”  
-以前也看见过吗？但是完全想不起来是什么时候在哪里见到的。虽然如此，但铃羽的本能敲响了警钟。这个钥匙链一定是有着什么重大的意义的。  
+以前也看见过吗？但是完全想不起来是什么时候在哪里见到的。虽然如此，但铃羽的本能敲响了警钟。这个钥匙圈一定是有着什么重大的意义的。  
 乌帕本身是随处可见的东西。本体的塑料部分呈圆形，涂装本来应该是更鲜艳的颜色，但是已经严重褪色，并且遍布各类撞击的痕迹。不过，完全没有粘到灰和脏东西，不如说被擦得闪闪发亮，想必它的主人一定很珍惜吧。挂环的地方因为长年累月的老化，有个部分明显断裂了。想必这就是它掉落的原因了。  
 “到底是哪里呢……我记得在哪里见过……”  
 “让真由喜看看怎么样？”  
@@ -75,7 +75,7 @@
 ![](../pics/0013-2.png)
 
 “妈妈！！”  
-“这是妈妈一直很珍惜的乌帕钥匙链哦~给你，要好好保管呐。”  
+“这是妈妈一直很珍惜的乌帕钥匙圈哦~给你，要好好保管呐。”  
 
 “……啊！！”  
 铃羽不禁倒吸一口气，后背激起一阵难以名状的战栗。  
@@ -110,7 +110,7 @@
 “你要是早点和妈妈在一起就什么问题都没有了……”  
 “诶，结果还是绕回那个话题了吗！？”  
 “总之还是需要多加注意啊。”  
-桶子把绿色的乌帕钥匙链递给了铃羽。铃羽接过后一边注视着，一边试着用指尖触碰它。  
+桶子把绿色的乌帕钥匙圈递给了铃羽。铃羽接过后一边注视着，一边试着用指尖触碰它。  
 “呐——铃羽，篝碳虽然和真由喜没有血缘关系，但是她的女儿吧？”  
 “是啊。”  
 “那样的真由理抚养出的孩子，会变成袭击别人的恐怖的人吗……？”  
