--- a/steins_gate_0/docs/0063.md
+++ b/steins_gate_0/docs/0063.md
@@ -1,6 +1,6 @@
 > <big> **轨道秩序的日蚀 - 01** </big>  
 > 1.064750  
-> [ 2010/12/23 ] 篝与铃羽相认，与真由理关系迅速拉近。冈伦拜托琉华子让篝继续借，并尽量不要让她离开神社；与萌郁联系，得知其他追查篝的人可能来头不小，摆脱萌郁继续追查。  
+> [ 2010/12/23 ] 篝与铃羽相认，与真由理关系迅速拉近。冈伦拜托琉华子让篝继续借，并尽量不要让她离开神社；与萌郁联系，得知其他追查篝的人可能来头不小，拜托萌郁继续追查。  
 
 “呼……”  
 “怎么样了？”  
