--- a/steins_gate_0/docs/0024.md
+++ b/steins_gate_0/docs/0024.md
@@ -1,6 +1,6 @@
 > <big> **双体福音的契约 - 06** </big>  
 > 1.129848  
-> [ 2010/12/24 ] 冈伦请比屋定帮忙给“红莉栖”道歉，随后邀请比屋定和教授参加圣诞派对。  
+> [ 2010/12/24 ] 冈伦请真帆帮忙给“红莉栖”道歉，随后邀请真帆和教授参加圣诞派对。  
 
 “冈伦！今天，之前说过要在LAB开圣诞派对这件事吧，有好好的记得吗？”  
 真由理的声音从电话那边传来，听起来正在兴头上。  
