--- a/steins_gate_0/docs/0038.md
+++ b/steins_gate_0/docs/0038.md
@@ -1,6 +1,6 @@
 > <big> **私秘境里的圣痕 - 02** </big>  
 > 1.129954  
-> [ 2011/06/25 ] 与真由理逛商场，送给她绿妖精乌帕。  
+> [ 2011/06/25 ] 与真由理逛商场，送给她森之妖精乌帕。  
 
 季节马上就要进入7月了。今年不知是不是干黄梅的原因，东京没有下梅雨的迹象，却已经呈现出了梅雨期后的天气。不如说，气温已经早就变成夏天的炎热了。  
 （夏天啊……）  
