--- a/steins_gate_0/docs/0011.md
+++ b/steins_gate_0/docs/0011.md
@@ -91,7 +91,7 @@
 吹雪：“哦哦！不愧是我的老婆！结婚吧！”  
 枫：“吹雪酱，真是给点阳光就灿烂呢。”  
 真由理：“像桶子君一样说话可不行的哟~”  
-吹雪：“唔……把我和那个Hentai（变态）绅士当作一类，我受到打击了。”  
+吹雪：“唔……把我和那个HENTAI（变态）绅士当作一类，我受到打击了。”  
 由季：“话说，真由理酱也会一起穿的吧，圣诞老人的衣服。”  
 真由理：“诶？”  
 由季：“诶个什么！这么可爱，多Cos点吧。”  
@@ -140,9 +140,9 @@
 真由理：“比如桶子君，你觉得怎么样？”  
 由季：“诶？桥田君？”  
 真由理：“嗯”  
-吹雪：“等等！你到底在说什么啊，真由喜！那个桥田可是Hentai绅士哟！”  
+吹雪：“等等！你到底在说什么啊，真由喜！那个桥田可是HENTAI绅士哟！”  
 枫：“由季可是会遭毒手的……”  
-被吹雪和枫共同下达糟糕评价的男人，名叫桥田至（*Hashida Itaru*），是冈伦的高中好友兼大学同学，和真由理三人为LAB最初期的成员。由于体型的缘故，所以昵称是取和名字相近的“桶子（*Taru*）”。是个重度的御宅族，二次元和三次元皆可的混合体。而且，就像吹雪所说，是个Hentai绅士。总是不顾羞耻和名声说些Hentai一样的话，但如果这样骂他的话，他就会反驳道“不对哟，是Hentai绅士哟！”
+被吹雪和枫共同下达糟糕评价的男人，名叫桥田至（*Hashida Itaru*），是冈伦的高中好友兼大学同学，和真由理三人为LAB最初期的成员。由于体型的缘故，所以昵称是取和名字相近的“桶子（*Taru*）”。是个重度的御宅族，二次元和三次元皆可的混合体。而且，就像吹雪所说，是个HENTAI绅士。总是不顾羞耻和名声说些HENTAI一样的话，但如果这样骂他的话，他就会反驳道“不对哟，是HENTAI绅士哟！”
 
 ![](../pics/0011-5.png)
 
