--- a/steins_gate_0/docs/0023.md
+++ b/steins_gate_0/docs/0023.md
@@ -81,8 +81,8 @@
 “呜呜……这样说的话……”  
 “你对由季，也不可能讨厌的吧？”  
 “对那么漂亮的人肯定是……而且那大腿和脖颈都让人想哈啊哈啊的去……”  
-“你够了变态……”  
-“不是变态，是Hentai绅士！”  
+“你够了HENTAI……”  
+“不是HENTAI，是HENTAI绅士！”  
 “哪种都好……我说的是，恋爱层面的意思。”  
 桶子弯下腰，把放在桌上的冰茶一口灌进喉咙。  
 “呜……嗯……那种事，我不是很懂呢……”  
