--- a/steins_gate_0/docs/0027.md
+++ b/steins_gate_0/docs/0027.md
@@ -23,7 +23,7 @@
 “喂，真由理……国王游戏那种东西，是联谊的时候才玩的啊……”  
 “我知道的啦~只是稍微搞错了而已……”  
 “嘛，被女孩子命令什么的，我这边是最喜欢的了！”  
-“桥田先生，真的是个Hentai先生的呢。”  
+“桥田先生真是个HENTAI呢。”  
 除了吹雪棒读一般的吐槽，其他人自动过滤了桶子的变态发言。  
 “于是，被真由喜稍微搞错了的这些一次性筷子，就决定拿来抽签用了喵！  
  抽中哪个编号，就可以拿到对应的礼物喵！”  
