--- a/steins_gate_0/docs/0033.md
+++ b/steins_gate_0/docs/0033.md
@@ -19,8 +19,7 @@
  在她之前我也只见过一个……”  
 “我知道了。你说的是桥田先生吧？”  
 “啊……”  
-“被当成是那种人的同类，前辈也太可怜了。  
- 从你的描述来看，桥田先生是个难以想象的变态啊。”  
+“被当成是那种人的同类，前辈也太可怜了。从你的描述来看，桥田先生是个难以想象的HENTAI啊。”  
 “是啊……对比屋定小姐失礼了。”  
 现在是周日的午后时分。和比屋定一起来零件商店是有原因的。她和雷斯吉宁教授决定在数日后回国。因为很快就要离开日本了，比屋定联系我，履行之前说好的承诺，给她当秋叶原的向导。于是我们今天上午在站前汇合，问她想去哪里的结果，就是现在这个状况。顺带一提，最先去的是友都八喜，接着是SOFMAP。除此之外，一些小路里面的二手电脑和复古电脑店也去了几家。  
 “比屋定小姐，很喜欢这种零件吗？”  
