--- a/steins_gate_0/docs/0047.md
+++ b/steins_gate_0/docs/0047.md
@@ -177,7 +177,7 @@
  我也是第一次知道  
  顺着那边的监控路线逆向找到了位置  
  冈部的事情，之后就交给你了  
- 让那个总是偷窥我的Hentai教授付出代价』  
+ 让那个总是偷窥我的变态教授付出代价！』  
 
 尽管是这种情况，读到信息的真帆还是忍不住笑了起来。  
 “谢谢你……‘红莉栖’……谢谢……”  
