--- a/steins_gate_0/docs/0016.md
+++ b/steins_gate_0/docs/0016.md
@@ -134,7 +134,7 @@
 “唔，好快！？”  
 铃羽打开铁门跳向楼梯平台，然后，就维持这速度，大约三阶并作一步地飞奔下楼。然而，却没追上。铃羽对自己的脚力很有自信，更不用说她还受过相应的训练。即使如此，仍然没能追上。终于下到2楼时，铃羽听到了摩托车引擎空转的声音。  
 “糟——”  
-心急的铃羽被放在楼梯的东西绊了一下，一脚踩空的她就这么从中间的部分滚落下来。采取受身动作护住头部的结果，令她的腰结实地撞到地上。忍住疼痛迅速起身，接着奔向楼外。结果只看到奔驰而去的摩托的大大的尾灯。可以看到驾驶的人被全黑的头盔和骑手服包裹着，再加上已经离开了相当一段距离，连是男是女都已经无法分辨了。尖锐的引擎声仿佛在嘲笑着咬牙切齿的铃羽一般，摩托车就这样转向转角处，消失在中央大道上。  
+心急的铃羽被放在楼梯的东西绊了一下，一脚踩空的她就这么从中间的部分滚落下来。采取受身动作护住头部的结果，令她的腰结实地撞到地上。忍住疼痛迅速起身，接着奔向楼外。结果只看到奔驰而去的摩托的大大的尾灯。可以看到驾驶的人被全黑的头盔和骑手装包裹着，再加上已经离开了相当一段距离，连是男是女都已经无法分辨了。尖锐的引擎声仿佛在嘲笑着咬牙切齿的铃羽一般，摩托车就这样转向转角处，消失在中央大道上。  
 “铃喵！没事喵？”  
 过了一会儿，菲莉丝追了上来。  
 “被逃掉了……”  
