--- a/steins_gate_0/docs/0046.md
+++ b/steins_gate_0/docs/0046.md
@@ -108,12 +108,12 @@
  我已经，不是以前的我了啊……”  
 真帆从天桥上眺望着车站前的人群，喃喃自语着。  
 
-突然，一个衣着特别显眼的人从桥下走了过来。如此炎热的天气，那个人却穿着黑色的骑手服，戴着全罩头盔，显得与周围格格不入。她还以为是所谓的cosplay，但是周围的人不要说拍照了，反而都退避地让出道路。看体形的话，好像是名女性。以真帆来看，那也算得上是凹凸有致富有魅力的身材。  
+突然，一个衣着特别显眼的人从桥下走了过来。如此炎热的天气，那个人却穿着黑色的骑手装，戴着全罩头盔，显得与周围格格不入。她还以为是所谓的cosplay，但是周围的人不要说拍照了，反而都退避地让出道路。看体形的话，好像是名女性。以真帆来看，那也算得上是凹凸有致富有魅力的身材。  
 那个女人就那样穿过天桥下方，离开了真帆的视线范围。  
 ——就在以为她已经离开的时候，那个人却从天桥的楼梯走了上来，而且笔直地朝向真帆的方向。  
-真帆就像其他行人一样慌忙低下视线，想赶快离开这个地方。然而在真帆逃开之前，穿骑手服的女性就跑到了她的身边，一言不发地抓住了她的手臂。
+真帆就像其他行人一样慌忙低下视线，想赶快离开这个地方。然而在真帆逃开之前，穿骑手装的女性就跑到了她的身边，一言不发地抓住了她的手臂。
 “呃……!”  
-脸颊传来一阵痛楚。还处在被抓住的惊愕状态的真帆不禁伴随着力道瘫倒在地。一开始真帆没有理解发生了什么，摸了摸自己隐隐作痛的脸颊，她才意识到自己被这个穿骑手服的女性扇了个耳光。  
+脸颊传来一阵痛楚。还处在被抓住的惊愕状态的真帆不禁伴随着力道瘫倒在地。一开始真帆没有理解发生了什么，摸了摸自己隐隐作痛的脸颊，她才意识到自己被这个穿骑手装的女性扇了个耳光。  
 “你伤害了妈妈吧？”  
 从头盔里，传来了女性沉闷的声音。  
 “我要杀了你……”  
@@ -147,7 +147,7 @@
 全都是自己的错。  
 这一切，都是自己的错。  
 明明直到刚才，心里都像被蒙上了一层雾的状态，所有东西都迷迷糊糊的，现在却要被冲上心头的猛烈的罪恶感击溃了。如果接下来，就和冈部说的一样，第三次世界大战从这个秋叶原开始爆发的话，那起因就是真帆将冈部持有的情报交给了STRATFO。  
-回过神来发现，刚才打了真帆一巴掌并威吓要杀了她的那个穿骑手服的女性，跑下了天桥，正向着车站的方向奔去。结果到最后都不知道那个女人到底是谁。  
+回过神来发现，刚才打了真帆一巴掌并威吓要杀了她的那个穿骑手装的女性，跑下了天桥，正向着车站的方向奔去。结果到最后都不知道那个女人到底是谁。  
 
 
 <br/>
