--- a/steins_gate_0/docs/0012.md
+++ b/steins_gate_0/docs/0012.md
@@ -120,18 +120,18 @@
 “真由理酱？”  
 “啊——来了来了，马上开门哦！”  
 桶子打开了门。铃羽做了个深呼吸，然后集中精神。她想起了曾经在战场狙击猎物的时候，三天三夜不吃不喝架着步枪一直等待的事情。把自己的气息完全消除，让呼吸变得更慢——爸爸，好好干哟。  
-“阿万音氏，今天要和真由喜碰头？”  
+“阿万音氏，今天要和真由氏碰头？”  
 桶子将女性请进房间，然后打着招呼。  
 “是的，是来做料理的特训来着……”  
 沙啦沙啦的声音，是塑料袋，大概是准备的一些食材吧。  
-“真由喜还没来呢。”  
+“真由氏还没来呢。”  
 “这样吗？可能稍微来早了点吧。”  
 阿万音由季，就像“阿万音”这个姓氏一样一目了然，她是铃羽**未来的母亲**。也就是说，现在房间里这样对话的两人，按照预定的话总有一天会结为夫妻的。  
 “嘛，有约的话应该过一会儿就来了吧。”  
 “我可以在这里等吗？”  
 “那是当然的。准备在这里做料理的吗？”  
 “是的，桥田君也请务必尝尝味道。”  
-“真由喜的……并不怎么想吃哦……”  
+“真由氏的……并不怎么想吃哦……”  
 “没问题的哟~真由理酱已经很拿手了。”  
 “嘿……嘿嘿……”  
 桶子明显很紧张。据铃羽所知，父亲只有在面对阿万音由季时才会表现出这种态度。桶子和真由理就像是亲人一样；与在LAB附近打工的留未姐——铃羽是用真实的名字来称呼菲莉丝的——也能亲密的接触。绝对不是因为不擅长应对女性。然而不知道为何，只有在阿万音由季的面前不能正常表现。铃羽把未来她会成为桶子的妻子并生下自己这件事情告诉了他本人——这可能是一个错误的决定，事到如今铃羽才这么觉得。  
