--- a/steins_gate_0/docs/0021.md
+++ b/steins_gate_0/docs/0021.md
@@ -36,7 +36,7 @@
 “就是！”  
 “我知道。稍微歇一会……”  
 铃羽竭尽最后的力气走到了沙发，瘫在上面，合上双眼。对自己说着，不要慌。  
-“真由喜去拿湿毛巾咯~”  
+“真由氏去拿湿毛巾咯~”  
 “桥田君，铃羽小姐的换洗衣服呢？”  
 “啊，这边，都在里头呢。  
  ——我当然没有在里面哈啊哈啊、闻来闻去的。”  
@@ -78,7 +78,7 @@
 铃羽抢过由季手中的内衣和外套，仍然是遮遮掩掩地穿好了。  
 她再次躺在沙发上后，由季帮她盖上了毛毯。  
 “真由理酱，这屋子里没有洗衣机吧？”  
-“嗯，所以一直挺不方便的。真由喜等会儿去下投币洗衣店好了。”  
+“嗯，所以一直挺不方便的。真由氏等会儿去下投币洗衣店好了。”  
 “哎？不劳你们那么费心了。”  
 “这种时候就该互相帮助嘛，铃羽小姐。”  
 “就是嘛，铃小姐、”  
