--- a/steins_gate_0/docs/0029.md
+++ b/steins_gate_0/docs/0029.md
@@ -24,7 +24,7 @@
 由季点点头，让我安下心来。  
 “刚才我们还在一起。”  
 “在一起？”  
-“是啊。有真由喜，留未穗，琉华君，枫酱。  
+“是啊。有真由氏，留未穗，琉华君，枫酱。  
  今早到机场后，说是会转到防卫局保护我们，就等着了。  
  刚才突然让我和吹雪酱走。”  
 “然后上了车，就发现冈伦也在。”  
@@ -212,7 +212,7 @@
 “冈伦……好难受哟……”  
 “啊，抱歉。”  
 抱得太紧了……被真由理提醒后，我松开了手。  
-“真由喜呢，相信着哟~一定能再见到冈伦，一直相信着。”  
+“真由氏呢，相信着哟~一定能再见到冈伦，一直相信着。”  
 “啊……”  
 “太好了！你没事喵！”  
 “冈部先生！”  
