--- a/steins_gate_0/docs/0030.md
+++ b/steins_gate_0/docs/0030.md
@@ -6,7 +6,7 @@
 “冈伦？”  
 “……？！”  
 真由理出现在眼前。这里是LAB，司空见惯的房间。冲绳的景色已经不见踪影。  
-“那个，被这样盯着的话，真由喜会有点害羞呢……”  
+“那个，被这样盯着的话，真由氏会有点害羞呢……”  
 回过神来，发现自己正目不转睛地盯着真由理。  
 在房间四处张望。桶子一如既往地驼着背坐在电脑前；铃羽坐在沙发上读着杂志。一如往常的沙发，便宜的冰箱，桶子的电脑桌，用来隔断开发室的脏兮兮的挂帘……从垃圾堆中捡来的挂钟，指向下午六点多。看向日历，2010年已经过去，已经是2011年的1月了。世界线……再次改变了。回来……了吗……原本的世界线？我立即开始向真由理确认：  
 “呐……真由理，这里是，秋叶原对吧？”  
@@ -82,7 +82,7 @@
 仔细一看，发出奇妙的声音回应的吹雪，正在毫无形象地在床上盘着腿，用旁边的小型液晶电视看着电视剧。眼睛虽然哭得红肿，嘴里却叼着Pocky，看样子只是单纯地被电视剧感动了。  
 “啊咧……哦哦，大家又来啦！”  
 吹雪擦掉眼泪，用一如既往的笑容迎接我们。  
-“呼……真由喜紧张死了~听到吹雪酱在哭什么的……”  
+“呼……真由氏紧张死了~听到吹雪酱在哭什么的……”  
 “真是太容易让人误会了……”  
 “抱歉抱歉。”  
 吹雪一边道着歉，一边又拿起一个巧克力零食塞进嘴里。她的头上戴着头套一样的东西，把头发束在一起。起初我以为她因为厌倦了住院生活不想弄头发才戴着这东西，事实好像并非如此。从头套延伸出数条数据线连接着腰间佩戴着的腰带，好像是监测脑电波的装置吧。想到这一点，我向病房内的其他患者看去。和吹雪一样，全员都佩戴着一样的装置。可能所有新型脑炎患者都佩戴着这样的东西。  
@@ -182,7 +182,7 @@
 “探病时间结束了哦。”  
 看了下时间，早就过了晚上8点了。  
 “匆匆忙忙的真是抱歉啊，吹雪酱。下次会早点来好好陪你的~”  
-“啊啊！真由喜~不要走~”  
+“啊啊！真由氏~不要走~”  
 “可是，护士小姐要生气的哟~”  
 “那些事无所谓啦~今晚和我一起睡吧！”  
 吹雪已经回到了平常的样子，紧紧地抓着真由理的手。枫苦笑着把她的手拉开了。  
