--- a/steins_gate_0/docs/0031.md
+++ b/steins_gate_0/docs/0031.md
@@ -72,7 +72,7 @@
 “铃羽！冈伦！你们在干什么啊？！”  
 突然间，桶子的声音响了起来。转向声音传来的地方，正好看到了刚刚爬上楼梯打开门的桶子的巨大身体。  
 “爸爸……！？为什么……”  
-“我收到了真由喜和阿万音氏的邮件，说是铃羽把冈伦叫出来了什么的。  
+“我收到了真由氏和阿万音氏的邮件，说是铃羽把冈伦叫出来了什么的。  
  我有种不好的预感，就到处找你们了哦。  
  还有，收到了发件人不明的邮件。”  
 “发件人不明？”  
@@ -97,7 +97,7 @@
  如果是普通的方法，无论多少次都没办法拯救牧濑氏的性命。”  
 “爸……连爸爸也……在说什么啊？”  
 “如果世界线的规则、因果律之类的能这么简单地被改变的话，  
- 冈伦在他所说的α世界线里，不早就拯救真由喜的性命了吗？”  
+ 冈伦在他所说的α世界线里，不早就拯救真由氏的性命了吗？”  
 “那，你说到底该怎么办才好啊！？”  
 桶子用拳头咚地敲了敲自己的胸脯。  
 “该怎么做，我们不是正在研究嘛。”  
