--- a/steins_gate_0/docs/0038.md
+++ b/steins_gate_0/docs/0038.md
@@ -57,11 +57,11 @@
 “啊？你说什么……？”  
 我的老家？  
 “今天，去冈伦家的时候，和叔叔谈到了这件事。  
-“‘那么就让真由喜来做！’——这样参选了。”  
+“‘那么就让真由氏来做！’——这样参选了。”  
 “喂喂……”  
 老爸那家伙，真是厚脸皮啊。  
 “你没有必要做这事哦。”  
-“但是但是，真由喜是想要做才做的。”  
+“但是但是，真由氏是想要做才做的。”  
 “真的……没关系吗？”  
 “因为总是受冈伦和叔叔阿姨的照顾呢。”  
 “……那么，作为补偿下次会送你礼物的。”  
@@ -137,7 +137,7 @@
  为了拯救一直都温柔地照顾它们的翔君，  
  在虚拟世界‘皮卡皮卡~’地放着光与乌帕合体了！
  那就是这个‘森之妖精先生乌帕’！超级可爱，超级强大的哟~
- 真由喜好感动啊~对这类剧情没辙呢~导演先生真是天才啊~”
+ 真由氏好感动啊~对这类剧情没辙呢~导演先生真是天才啊~”
 “原、原来如此啊。”  
 能让真由理这么热衷地诉说的事情实在少有。的确仔细看的话，能发现真由理拿着的乌帕和普通的绿色乌帕在设计上稍微有些区别。因为不怎么了解乌帕，哪里有什么不一样……要是被这么问的话还是一头雾水的。  
 “这个钥匙圈啊，我到处找过呢。  
@@ -145,7 +145,7 @@
 “很幸运呢。”  
 “嗯！而且，这是最后的一个哟~今天来了真是太好了，要感谢冈伦和叔叔呢！”  
 真由理用指尖灵巧地拆开纸质的商品包装，从包中取出家里的钥匙，然后小心地装了上去。  
-“嘿嘿~呐，冈伦，真由喜啊，要把这个一直~一直~~珍藏着的！”  
+“嘿嘿~呐，冈伦，真由氏啊，要把这个一直~一直~~珍藏着的！”  
 “啊，好好珍惜吧！千万别才买了5分钟就丢了哦。”  
 真由理可是有前科的。我在广播管抽到的金属乌帕，在交到真由理手中后，仅仅5分钟就弄丢了。到最后，那个金属乌帕也一直都没有找到。那个时期的事不怎么想回忆起来，所以关于金属乌帕的去向也就不了了之了。  
 “嗯！绝对、绝~对~~不会再弄丢的！”  
@@ -154,7 +154,7 @@
 “啊——还有这么一回事啊……”  
 还以为买完材料就算结束了。不如说现在才是正式开始。  
 “要我帮忙吗？”  
-“不不，没事的。希望你能相信真由喜的品味啊~”  
+“不不，没事的。希望你能相信真由氏的品味啊~”  
 “……光是买了心形的POP这点，就该怀疑你的品味了。”  
 “没问题的啦~”  
 “嘛，能帮忙弄POP已经很感谢了，没什么抱怨的了。”  
