--- a/steins_gate_0/docs/0054.md
+++ b/steins_gate_0/docs/0054.md
@@ -14,7 +14,7 @@
 父亲是谁！？实在是没敢这么问。  
 “嗯？稍微等下，既然女孩姓椎名的话，姓氏没有变啊？这么说的话……”  
 “篝是战争遗孤。真由姐收留了没有归宿的她并抚养她长大。”  
-“啊……这的确像是真由喜的风格。”  
+“啊……这的确像是真由氏的风格。”  
 听到这些，我居然在双重意义上感到了安心，也稍微陷入了自我厌恶之中。就算真由理在未来和谁结婚，只要她幸福的话，这明明是值得高兴的事情啊……明明应该这样的。  
 “我受真由姐之托照顾篝。所以，本来不应该变成这种情况的——  
  那孩子之前一直粘着真由姐，到这个时代谁都不认识，内心肯定一直充满不安……”  
@@ -39,7 +39,7 @@
 当然，我并不把这视为赎罪。  
 “谢谢。”  
 
-“真由喜的<abbr title="注：“幼女”和“养女”同音">幼女</abbr>怎么了吗~？”  
+“真由氏的<abbr title="注：“幼女”和“养女”同音">幼女</abbr>怎么了吗~？”  
 突然，在极近距离处传来声音，全员一齐向看过去。  
 “嘟嘟噜~冈伦，真的在这等着呢！”  
 真由理……  
@@ -53,11 +53,11 @@
 “真由姐……你什么时候来的？”  
 “嗯？刚刚才到的哟？”  
 失算了……太过专注于铃羽的话，没有注意到真由理进入房间。  
-“呐呐，我听到真由喜的幼女什么的，到底在说什么呀？”  
+“呐呐，我听到真由氏的幼女什么的，到底在说什么呀？”  
 “嗯……这个嘛……这个……”  
 不妙。虽然真由理知道铃羽是从未来过来的，但是突然听到未来的女儿这种事的话刺激是在是太强烈了。一定要想办法糊弄过去。  
 “真、真由理看起来还很年幼——所以被称为幼女，对吧桶子？”  
-“诶？啊，没错没错。真由喜像幼女一样可爱！”  
+“诶？啊，没错没错。真由氏像幼女一样可爱！”  
 “嗯，经常被人说是娃娃脸呢~虽然我本人是想变得像由季那样成熟的感觉呢。”  
 “可能只有食量这一点像真正的大人吧。”  
 “诶嘿嘿~”  
