--- a/steins_gate_0/docs/0063.md
+++ b/steins_gate_0/docs/0063.md
@@ -92,9 +92,9 @@
 “是、是！”  
 “篝小姐的姓是什么呢？刚才没有听到，所以，可以的话能告诉我吗？”  
 “那个……根据冈部先生他们说的……应该是……椎名……”  
-“哇！那不是，和真由喜一样呢~真由喜，也姓椎名呢——椎名真由理。”  
+“哇！那不是，和真由氏一样呢~真由氏，也姓椎名呢——椎名真由理。”  
 “椎名……真由理小姐……”  
-“嗯！好开心啊~真由喜，这还是第一次，遇到同样姓氏的人呢~”  
+“嗯！好开心啊~真由氏，这还是第一次，遇到同样姓氏的人呢~”  
 “是吗……”  
 “嗯。所以，之后请多关照~”  
 “好、好的。我才是，请多关照。”  
@@ -105,12 +105,12 @@
 “是……”  
 “是吗……一定，很辛苦吧？  
  因为，连自己最喜欢的人的事情也会忘记吧？  
- 这是，非常非~常悲伤的事情，真由喜是这么想的。  
- 所以呢，那个……虽然不知道该怎么说，真由喜也会帮忙的，加油啊~！”  
+ 这是，非常非~常悲伤的事情，真由氏是这么想的。  
+ 所以呢，那个……虽然不知道该怎么说，真由氏也会帮忙的，加油啊~！”  
 真由理莞尔一笑。篝看见这个笑容，眼角瞬间湿润了。  
-“哇啊，突然怎么了？真由喜，说了什么奇怪的话吗？”  
+“哇啊，突然怎么了？真由氏，说了什么奇怪的话吗？”  
 “……不……不是……只是，听到真由理小姐的话……不由自主……非常开心……”  
-“不只是真由喜，冈伦、铃小姐、琉华君，大家都是一样的心情哟~”  
+“不只是真由氏，冈伦、铃小姐、琉华君，大家都是一样的心情哟~”  
 “嗯！当然了！我也是，如果有能做的事情，我什么都会做的！”  
 “十分感谢……琉华君，真由理小姐。”  
 感觉，把篝的事情交给真由理和琉华子就没问题了。问题是接下来该怎么办……  
@@ -123,7 +123,7 @@
 “铃羽……你看这样好吗？”  
 “明白了……”  
 大概是有各方面的考虑，铃羽直率地点头了。现在的首要任务应该是取回篝的记忆。  
-“那这样就是说，去琉华君的家里就能见到篝了对吧？真由喜也可以去玩吗？”  
+“那这样就是说，去琉华君的家里就能见到篝了对吧？真由氏也可以去玩吗？”  
 “当然哟！你觉得呢，篝小姐？”  
 “好！”  
 “铃羽也尽量多去露露脸。这样对恢复记忆应该有好处。”  
