--- a/steins_gate_0/docs/0067.md
+++ b/steins_gate_0/docs/0067.md
@@ -38,7 +38,7 @@
 绹：“那个，喵咪姐姐。”  
 “嗯？怎么了喵？”  
 绹：“真由理姐姐在哪？”
-“真由喜？记得刚刚的确是在御神酒那边的……啊，在那喵！  
+“真由氏？记得刚刚的确是在御神酒那边的……啊，在那喵！  
  真—由—喜—！快来这边喵！冈伦他们来了喵~！”  
 因为菲莉丝的呼喊，终于发现我们的真由理，牵着篝的手，一路小跑着过来了。  
 
@@ -67,7 +67,7 @@
 真由理：“诶嘿嘿~”  
 枫：“啊，这位是之前提到的，那个……”  
 篝：“啊，我叫篝，椎名篝。”  
-吹雪：“真的呢，和真由喜是一样的姓氏呢。”  
+吹雪：“真的呢，和真由氏是一样的姓氏呢。”  
 篝：“嗯，真巧。”  
 虽然并不是巧合。  
 吹雪：“嗯……篝的身材也好棒，应该很适合cos的。”  
@@ -78,7 +78,7 @@
 枫：“吹雪酱！”  
 吹雪：“啊，这个……抱歉。”  
 篝：“啊，没什么，别在意，没关系的。”  
-真由理：“呐，冈伦也来这边，真由喜来给你消灾避邪吧~这个叫……那个，那个……叫什么来着？”  
+真由理：“呐，冈伦也来这边，真由氏来给你消灾避邪吧~这个叫……那个，那个……叫什么来着？”  
 “这叫<abbr title="神道教祭祀时使用的道具。在红淡比的树枝前端挂上纸垂，对着祓除对象挥舞，将秽气从对象身上转移至大币内。">大币</abbr>，真由理酱。”  
 真由理：“对对，大币~”  
 “为了消灾避邪，首先要先向神明大人双手合十祈祷呢。”  
