--- a/steins_gate_0/docs/0002.md
+++ b/steins_gate_0/docs/0002.md
@@ -8,7 +8,7 @@
 「啊啊，没问题」  
 『是吗？真好呢~  
  很期待是怎样的研讨会呢  
- 真由喜也想看看啊~』  
+ 真由氏也想看看啊~』  
 「对你来说可能太难了」  
 ![](../pics/emojis/Mayuri-wuyu.png)  
 『说的也是呢~那么，就不打扰你啦，再见~~』  
