--- a/steins_gate_0/docs/0007.md
+++ b/steins_gate_0/docs/0007.md
@@ -21,7 +21,7 @@
 “那，应该怎么叫比较好喵？”  
 “那当然是，冈部什么的……”  
 “果然啊，还是叫冈伦这样的，更加可爱点是不是更好呀？是吧，菲莉丝酱！”  
-“嗯，真由喜这么说的话，以后就这么叫好了喵……虽然哪里还是有点违和感。”  
+“嗯，真由氏这么说的话，以后就这么叫好了喵……虽然哪里还是有点违和感。”  
 一边摆着还没完全接受的样子，菲莉丝总算是从我这里抽开了身子。  
 
 “琉华子也是，好久不见了啊。”  
@@ -79,7 +79,7 @@
 “别搞错了啊，我对女孩子什么的并不……”  
 实际上，虽然我也算成员之一，但那里并不是什么像我这种的临时现充能够待的地方。说到底，跟那群真现充根本不可能说得上话。在一群衣着光鲜的男女面前就只有我是一副不明所以的样子，这才是事实真相。对我来说实在是一种鲁莽的挑战……  
 这件事也是，还是不要跟菲莉丝他们说算了。  
-“真好啊——真由喜也想跟冈伦联谊呢~”  
+“真好啊——真由氏也想跟冈伦联谊呢~”  
 啥？真由理！？是应该有这方面兴趣的年龄吗！？  
 “因为啊，是大家一起在快快乐乐的派对不是吗~？”  
 ……好像哪里不对。  
@@ -90,7 +90,7 @@
 铃羽……么。  
 阿万音铃羽，又称约翰·提托（*John·Titor*），从2036年来的时间旅行者。与现在正拼命要放弃抗争的我形成鲜明对比的，从不放弃的真正的战士。夏天以来，就没怎么再见到过她。是我主动要避开和她见面。我开始远离LAB这件事，也是有她现在正住在LAB里的这个原因的。毕竟到一个月前为止，我只要听到铃羽的名字，过去的记忆就会开始浮现，光是忍受这一点就让我精疲力竭。那件事之后过了3个月，虽然总算能够做到听到她的名字也没问题，但是直接见面的话，我仍旧没有能够保持冷静的自信。当然不是那家伙的错，也没有去责怪她的想法。所以，我希望铃羽也不要怪罪我。但尽管没有直接责备我，可是一旦被那家伙尖锐的目光看着的时候，心中就会出现像是罪恶感一般的感觉，这也是事实。  
 
-“我，我说，大家？真由喜呢，有一个和桶子君一起考虑的作战方案！”  
+“我，我说，大家？真由氏呢，有一个和桶子君一起考虑的作战方案！”  
 “作战方案？”  
 完全像是以前的我一样啊……  
 “是什么样的作战喵？”
@@ -100,7 +100,7 @@
 ……不，或许不是“突然”。这家伙也站在她的立场上一直在考虑着也说不定。  
 因此我也，尽量明快的回答她：  
 “说出来听听吧，真由理。”  
-“嗯！那个呢，真由喜在想，铃小姐平时虽然看起来很可怕，其实说不定是非常温柔的人呢？  
+“嗯！那个呢，真由氏在想，铃小姐平时虽然看起来很可怕，其实说不定是非常温柔的人呢？  
  在LAB的时候呢，在沙发上迷迷糊糊睡着，不知什么时候盖上了毯子。  
  就算向铃小姐询问，‘那种事情我不知道’——她也只会这样回答我。”  
 “啊，我也有这样的事情！以前，被父亲派去买东西，回去的路上正因为东西太重在烦恼。  
@@ -116,7 +116,7 @@
 “圣诞晚会？”（×3）  
 同步了！  
 “不是马上就要圣诞节了吗？铃小姐呢，说从来没有去过圣诞晚会。  
- 所以真由喜想把这个当作礼物送给铃小姐。”  
+ 所以真由氏想把这个当作礼物送给铃小姐。”  
 听到这话的菲莉丝和琉华子，几乎同时点了下头。  
 “这件事，我参加了喵！”  
 “我也是！”  
@@ -126,7 +126,7 @@
 “暂且不说我……铃羽应该不愿意吧？”  
 不会再跳跃到过去。我这样说的时候铃羽的表情，就算到了今天也无法忘记。充满了愤怒和绝望的表情，就像刚抓到手的最后的希望从眼前消失的感觉吧。她那个时候对我说的话，现在也像锐利的刺一样扎在我的心上。  
 “铃羽……很讨厌我的……”  
-“真由喜并不这么认为哟。  
+“真由氏并不这么认为哟。  
  铃小姐呢，是不是因为对冈伦发火的事情，在后悔着呢？  
  我想，她肯定是无法坦率地说出来这份心情的。”  
 “是这样的吗？”  
@@ -155,7 +155,7 @@
 “非常感谢！”  
 “诶嘿嘿~要吃什么呢~炸鸡吗~”  
 “多汁炸鸡？”  
-“真由喜满脑子全是这个喵。”  
+“真由氏满脑子全是这个喵。”  
 
 一边走在结伴三人的后面，忽然考虑着，在这里，红莉栖在的话……明明，这数月中一直努力不去考虑那家伙的事情的。会这样想，果然是昨天的体验的原因吧。昨天，我看到的，那个表情和动作；和我说话的，那个声音和说话方式，让我回忆起来，和她的对话……  
 
