--- a/steins_gate_0/docs/0014.md
+++ b/steins_gate_0/docs/0014.md
@@ -49,7 +49,7 @@
 “LAB……”  
 不知道时机算好还是坏……  
 “对了，好久没来的冈伦要不要也一起来？可以吃到由季亲手做的料理哦~  
- 另外呢，真由喜也准备努力制作的说！  
+ 另外呢，真由氏也准备努力制作的说！  
  怎么……样……？”  
 真由理越说越小声，越说越纠结的样子。  
 
@@ -112,7 +112,7 @@
 跟着真由理走进LAB，总之先坐在了沙发上。但是心情完全没有冷静下来，还是非常的坐立不安。而真由理已经开始和由季聊起天来。  
 “由季，这件洋服好可爱哟~”  
 “就是想要真由理酱这么说，我才穿的哟！”  
-“真好啊，真由喜也想穿穿看的说。”  
+“真好啊，真由氏也想穿穿看的说。”  
 “之后要换穿试试吗？”  
 “大小合适吗？”  
 我也从铃羽那里听说了由季未来的事情。这样的大美人将来会和桶子结婚什么的，我到现在还不敢相信，就连桶子本人都和我持同一意见。这简直是奇迹。的确由季身上有铃羽的影子，我觉得她们毫无疑问是母女。但是，桶子最近好像完全跟不上由季的节奏，也发短信抱怨过不擅长应付她。难不成……这两人之间的形式不太妙？但是世界线的收束应该不会引向他们没有结婚的未来才对。  
