--- a/steins_gate_0/docs/0064.md
+++ b/steins_gate_0/docs/0064.md
@@ -9,7 +9,7 @@
 “呵呵，嘟嘟噜~desu。”  
 “哇，篝酱，好棒！”  
 “诶？什么？”  
-“因为，就算真由喜说嘟嘟噜~，一开始大家都不肯用嘟嘟噜~回我呢。”  
+“因为，就算真由氏说嘟嘟噜~，一开始大家都不肯用嘟嘟噜~回我呢。”  
 “要求初次见面的人理解这是打招呼也太苛刻了。”  
 “嗯。所以明明大家的反应都是‘那是啥？’，篝却很正常地回复了我，真的好棒！”  
 “我、我也没特别……只是莫名觉得应该是那样吧。”  
@@ -34,7 +34,7 @@
 从见面起就无精打采的篝，第一次看到了她的笑容。感觉那笑容很孩子气，比理论年龄要年轻许多。  
 “啊，对不起。我真是的，突然这么自来熟……”  
 “不，没关系的。我也没有用敬语说话。”  
-“是呀~真由喜也觉得普通地说话更开心~因为那样才更有好朋友的感觉呀~”  
+“是呀~真由氏也觉得普通地说话更开心~因为那样才更有好朋友的感觉呀~”  
 “好朋友……”  
 “嗯！好朋友。”  
 “谢谢你，真由理酱。嘿嘿，好朋友啊……”  
@@ -80,7 +80,7 @@
 “但是，那样太麻烦两位……”  
 “啊啦，我没问题哟，琉华君。一直受你们照顾，这种小事当然没问题。”  
 “真的吗？”  
-“唔……真由喜要准备新年派对所以……而且，虽然我喜欢做cos服，但自己穿就……”  
+“唔……真由氏要准备新年派对所以……而且，虽然我喜欢做cos服，但自己穿就……”  
 真由理，巫女装可不是cos，姑且不算吧……  
 “是吗……真由理酱的巫女装，冈部君，你应该很想看吧？”  
 “哈？”  
@@ -101,14 +101,14 @@
 “但是，巫女装什么的，我穿合适吗……”  
 “没问题！篝酱肯定合适呀~”  
 “是吗？”  
-“嗯！真由喜给朋友做过很多cos服，我一看就知道的。”  
+“嗯！真由氏给朋友做过很多cos服，我一看就知道的。”  
 “这么说的话，我就努力一下吧。”  
 “嗯！”  
 基于尽量不让篝离开神社来说，这样的活动应该也能让她放松一下。琉华父亲的提案是连这些都考虑到了吗……怎么可能，一定不是。无论怎样，看来新年会很热闹了。  
 “那，我就先告辞了。”  
 “诶，这就回去了吗？我还没上茶……”  
 “我只是来看篝的情况的。”  
-“啊，冈伦。真由喜还——”  
+“啊，冈伦。真由氏还——”  
 “我知道。还要商量一会儿新年的事吧？我先回LAB了。”  
 “谢谢，冈部先生。”  
 篝微微低头向我道谢，脸上一副无忧无虑的笑容。作为战争孤儿的她，如果有过去记忆的话，还能露出这样的笑容吗……  
