--- a/steins_gate_0/docs/0011.md
+++ b/steins_gate_0/docs/0011.md
@@ -38,7 +38,7 @@
 自己做的衣服被赞扬，对真由理来说是比什么都高兴的事情。吹雪她们是知道的。  
 真由理：“啊，有另外一件事，真由氏想要拜托大家。其实……”  
 真由理郑重其事地向三人说的，是现在已经成为日本人年末的例行公事一样的一大活动——  
-真由理：“我们要开圣诞派对！由季小姐，枫小姐和吹雪酱请务必要来哦~”  
+真由理：“我们要开圣诞派对！由季，枫酱和吹雪酱请务必要来哦~”  
 吹雪：“圣诞派对吗？”  
 真由理：“嗯！怎么样？”  
 吹雪：“要去要去！”  
