--- a/steins_gate_0/docs/0030.md
+++ b/steins_gate_0/docs/0030.md
@@ -148,7 +148,7 @@
 “中濑小姐，你所说的梦，该不会地点是在冲绳吧？”  
 “诶？是的……吧。嗯，我想……大概就是冲绳。  
  坐在车上的时候，好像看到了那样的标牌。”  
-“车上的有，我和你，还有由季小姐，另外有司机和矮个子的男性自卫队员。”  
+“车上的有，我和你，还有由季，另外有司机和矮个子的男性自卫队员。”  
 “嗯。”  
 “男人的名字是，下山。”  
 “啊……！”  
