--- a/steins_gate_0/docs/0012.md
+++ b/steins_gate_0/docs/0012.md
@@ -188,7 +188,7 @@
 
 “嘟嘟噜~”  
 玄关的门打开后，房间里响起了早已听惯的问候。  
-“不好意思呢，由季小姐，稍微有点迟到了~”  
+“不好意思呢，由季，稍微有点迟到了~”  
 是跟阿万音由季约好在这里会合的椎名真由理。  
 但是，不只是她，还有一个人的气息存在着。  
 “真由理酱，你好啊~冈部先生也在一起啊~”  
