--- a/steins_gate_0/docs/0014.md
+++ b/steins_gate_0/docs/0014.md
@@ -98,7 +98,7 @@
 
 “嘟嘟噜~”  
 真由理先走了进去。  
-“不好意思呢，由季小姐，稍微有点迟到了~”  
+“不好意思呢，由季，稍微有点迟到了~”  
 “真由理酱，你好啊~”  
 我窥视着屋内。屋里有桶子和阿万音由季在，两个人看见我，瞪大了眼睛。  
 “冈部先生也在一起啊~”  
