--- a/steins_gate_0/docs/0059.md
+++ b/steins_gate_0/docs/0059.md
@@ -51,7 +51,7 @@
 “嗯……？”  
 真帆感觉到被谁盯着，回过了头。明明是平常时段，车站却人烟混杂。但是在那些人中没有找到真帆所感觉到的人。  
 “……错觉……吧。”  
-真帆一个人嘟囔着，再次迈出了脚步。【未来道具研究所】的地址从“红莉栖”那里得知了。虽然对秋叶原的地理位置不是那么熟，不过到了万不得已的时候只要让“红莉栖”当向导就行了。只是，突然到访的话，冈部如果不在该怎么办呢？虽然有些不安，不过如果真是那样就乖乖回去罢了。  
+真帆一个人嘟囔着，再次迈出了脚步。【未来机械研究所】的地址从“红莉栖”那里得知了。虽然对秋叶原的地理位置不是那么熟，不过到了万不得已的时候只要让“红莉栖”当向导就行了。只是，突然到访的话，冈部如果不在该怎么办呢？虽然有些不安，不过如果真是那样就乖乖回去罢了。  
 走马观花地扫过各式各样店铺陈列出来的商品，就这样走了一段时间——  
 “……”  
 果然，感觉到了谁的目光。但是，回头一看也没发现可疑的人。  
@@ -69,7 +69,7 @@
 “喂，冈部先生！？我是比屋定！我现在就在你的LAB的附近——！”  
 但是，真帆没机会说出更多的话来。感觉到有人从背后紧紧环抱住她的同时，手机从手中掉了下去。  
 
-【LAB·未来道具研究所】
+【LAB·未来机械研究所】
 
 “这个是……？”  
 我接过默不出声的桐生萌郁递过来的纸张，提出询问。  
