--- a/steins_gate_0/docs/0074.md
+++ b/steins_gate_0/docs/0074.md
@@ -22,7 +22,7 @@
 在那里站着的是——  
 牧濑红莉栖。  
 
-红莉栖背对我坐在桌前，低着头，好像在盯着什么东西看。不可能……红莉栖不可能在这里。因为，她已经……她已经死了。难道是我看到了幻象吗？是想见红莉栖的心意，诞生了她的幻象吗？但就算是幻象，这身姿也太真实了。即便如此，感觉好像一出声她就会立刻消失一样。我连话都说不出来。红莉栖身体一动不动，到底是在看着什么呢？正当我觉得眼前完全静止的身影果然是幻觉的时候，红莉栖终于稍稍呼了口气，然后慢慢地站起身转了过来。  
+红莉栖背对我伫立着，低着头，好像在盯着什么东西看。不可能……红莉栖不可能在这里。因为，她已经……她已经死了。难道是我看到了幻象吗？是想见红莉栖的心意，诞生了她的幻象吗？但就算是幻象，这身姿也太真实了。即便如此，感觉好像一出声她就会立刻消失一样。我连话都说不出来。红莉栖身体一动不动，到底是在看着什么呢？正当我觉得眼前完全静止的身影果然是幻觉的时候，红莉栖终于稍稍呼了口气，然后慢慢地站起身转了过来。  
 
 ![](../pics/0074-1.png)
 
