--- a/steins_gate_0/docs/0064.md
+++ b/steins_gate_0/docs/0064.md
@@ -21,7 +21,7 @@
 “说来是呢。圣诞快乐。”  
 “圣诞快乐，desu。”  
 说到底，在神社庆祝圣诞合适吗？
-“话说回来，那个……篝，身体……怎么样了？”  
+“话说回来，那个……篝小姐，身体……怎么样了？”  
 “不算差。只是……还什么也……”  
 “不，关于记忆不用勉强去想。时间到了自然会恢复，保持这种心态就好了。”  
 “知道了。”  
