--- a/steins_gate_0/docs/0067.md
+++ b/steins_gate_0/docs/0067.md
@@ -55,7 +55,7 @@
 “那个因为是工作所以没关系。”  
 如果是工作就没事，如果是私下里就不行什么的，真是无法理解的理由。而且，就算是这次巫女的事，因为会付工资所以也算是工作呀。  
 “呐，冈部先生，我这身怎么样？合适吗？”  
-“啊……篝也是，很合身。”  
+“啊……篝小姐也是，很合身。”  
 “耶！太好了！对了，之后请一起拍张照吧？”  
 “拍照？倒是没什么问题……”  
 “你看，有照片话就会留下记录了吧？我，想把现在的时间好好地记录下来，为了不会再遗忘。”  
