--- a/steins_gate_0/docs/0070.md
+++ b/steins_gate_0/docs/0070.md
@@ -53,7 +53,7 @@
 
 “——！”
 铃羽的鞭腿被穿黑色骑手装的女人在极近的距离用手臂格挡住了。但是，她为了防御松开了抓着篝的手。  
-“篝！”  
+“篝小姐！”  
 我马上伸出手把篝拉了回来。  
 “冈部先生……”  
 “——！”
@@ -107,7 +107,7 @@
 “让我住到琉华哥的家里？”  
 “嗯，虽然也考虑过到其他地方安置篝，不过这里人数也多，防盗设施也很齐全。”  
 估计是为了应对香油钱小偷和捣乱的人吧，稍微扫视一下四周，就能发现到处都装配有防盗摄像头。另外，这原本也是篝本人的意愿。  
-“篝也觉得这里比较好吧？”  
+“篝小姐也觉得这里比较好吧？”  
 “……嗯。”  
 很正常，本来就已经因为丧失记忆导致精神不安了，又发生了今天这样的事。  
 “铃羽在的话，大家也会稍微放心点吧。当然，这需要琉华子家人的同意。”  
