--- a/steins_gate_0/docs/0007.md
+++ b/steins_gate_0/docs/0007.md
@@ -108,7 +108,7 @@
 “诶，我还是第一次听说呢。”  
 “她说，‘这种理所当然的事情，不要对别人说了’——啊，说漏嘴了……”  
 “是吗……”  
-α世界线的铃羽，一直用笑脸面对着大家，飒爽地骑着山地自行车的开朗的女孩子。与之相对的，这个世界线的铃羽，并不是那种经常让人看见笑容的类型。这是铃羽的经历的影响。根据从桶子那里间接听来的事情，因为第三次世界大战为契机实行的国民皆兵制度，铃羽似乎从中学的时候就开始接受军事训练了。在那之后，参加时间机器方面的反体制势力，投身于激烈的斗争中。由于这个的影响，就和发自心底的笑容无缘了。  
+α世界线的铃羽，一直用笑脸面对着大家，飒爽地骑着山地自行车的开朗的女孩子。与之相对的，这条世界线的铃羽，并不是那种经常让人看见笑容的类型。这是铃羽的经历的影响。根据从桶子那里间接听来的事情，因为第三次世界大战为契机实行的国民皆兵制度，铃羽似乎从中学的时候就开始接受军事训练了。在那之后，参加时间机器方面的反体制势力，投身于激烈的斗争中。由于这个的影响，就和发自心底的笑容无缘了。  
 
 “原来如此啊……”  
 “那，具体的话要做什么喵？”  
@@ -138,7 +138,7 @@
 “那…那个，话说，冈部先生。”  
 正好谈话告一段落，琉华子怯生生地问道。  
 “……诊察，怎么样了？”  
-琉华子大概是从真由理那里听说了心理咨询的事情。今天特意通过真由理想要见面，也许是在意诊察的结果吧。琉华子和菲莉丝，也让她们担心了呢。在这个世界线，两人虽然不是LABMem，但作为无可替代的伙伴这一点并没有不同。  
+琉华子大概是从真由理那里听说了心理咨询的事情。今天特意通过真由理想要见面，也许是在意诊察的结果吧。琉华子和菲莉丝，也让她们担心了呢。在这条世界线，两人虽然不是LABMem，但作为无可替代的伙伴这一点并没有不同。  
 “催眠疗法这样的虽然是初体验，真是相当有趣啊。  
  我至今为止都认为我不会中什么催眠术的，吃惊了。”  
 “中招了吗？”  
