--- a/steins_gate_0/docs/0014.md
+++ b/steins_gate_0/docs/0014.md
@@ -89,7 +89,7 @@
 “桥田有好好的交给我的，安心吧。”  
 “是这样嘛？”  
 “嗯啊。”  
-这个男人……在这个世界也是Rounder吗？这种事情，也不可能向本人确认。无论如何，不得不提高警惕。因此也和他保持了一定的距离。至少，尽量的避免以前那样的交流。  
+这个男人……在这条世界线也是Rounder吗？这种事情，也不可能向本人确认。无论如何，不得不提高警惕。因此也和他保持了一定的距离。至少，尽量的避免以前那样的交流。  
 “就聊到这吧。不要闹得太厉害了哟。”  
 天王寺先生看了一眼沉默着的我，返回了店里。真由理也担心地看了看我的脸色：  
 “没事吧？果然还是回去？”  
