--- a/steins_gate_0/docs/0041.md
+++ b/steins_gate_0/docs/0041.md
@@ -29,7 +29,7 @@
 “啊……”  
 桶子垂下了眼，眼神突然变得很寂寞。  
 “别摆出那样的表情。咱们都说好了吧？不会再迷茫了。”  
-这半年，铃羽一直在反复思考，把这个世界线变成没发生过，真的好吗？  
+这半年，铃羽一直在反复思考，把这条世界线变成没发生过，真的好吗？  
 但是每当这种时候，背后给她打气的不是别人，就是桶子本人和他说过的话。  
 “对不起……”  
 桶子失落的样子实在让铃羽看不下去，于是她用手掌拍了拍他庞大的后背。  
