--- a/steins_gate_0/docs/0074.md
+++ b/steins_gate_0/docs/0074.md
@@ -94,7 +94,7 @@
 “对不起，是我说了多余的话……”  
 “不……不是的……不是……”  
 “……要吃点药吗？我去拿水过来。”  
-在自己衣服的口袋里掏了一会儿，拿出了一个小小的药盒。和我一直在吃的药一样，精神安定剂。结果，就算是在这个世界，我好像也是在依靠精神安定剂的样子。在红莉栖为我倒水的时候，我环顾屋内。  
+在自己衣服的口袋里掏了一会儿，拿出了一个小小的药盒。和我一直在吃的药一样，精神安定剂。结果，就算是在这条世界线，我好像也是在依靠精神安定剂的样子。在红莉栖为我倒水的时候，我环顾屋内。  
 “呐……冈部，为什么……为什么来了这里？”  
 “诶？”  
 “你不是一直都不愿意靠近这里吗？桥田也都不过来了。”  
@@ -119,7 +119,7 @@ D-mail？
 “说起来，电话微波炉（暂定）怎么样了？”  
 “诶？怎么样了……你破坏的，忘了吗？”  
 “啊……这样啊……”  
-看来，电话微波炉（暂定）在这个世界已经不存在了。想想也是当然的，因为只要有那东西存在，我们就会成为SERN的目标。但是没有电话微波炉（暂定）的话，就意味着没有办法凭借我的意愿，从这个世界线中脱离出去。这样的话，即使留在这条世界线，也不是我的错。这既不是我的责任，也不是因为我的期望造成的。既然如此——  
+看来，电话微波炉（暂定）在这条世界线已经不存在了。想想也是当然的，因为只要有那东西存在，我们就会成为SERN的目标。但是没有电话微波炉（暂定）的话，就意味着没有办法凭借我的意愿，从这条世界线中脱离出去。这样的话，即使留在这条世界线，也不是我的错。这既不是我的责任，也不是因为我的期望造成的。既然如此——  
 
 “呐，冈部。”  
 “嗯？”  
