--- a/steins_gate_0/docs/0075.md
+++ b/steins_gate_0/docs/0075.md
@@ -101,7 +101,7 @@
  不从梦里醒来是不行的啊。因为我已经……已经不想再看见你这么痛苦了……”  
 “红莉栖……”
 “那么，这样下去也是浪费时间。我要开始了。”  
-斩钉截铁地扔下结论，红莉栖转过身去。存在于她的背影中的，是无可动摇的意志，是决意。我想起了刚来到这个世界线时候，一直伫立在那里的红莉栖。现在想起来，她站在电话微波炉（暂定）面前之时，就已经下定决心了。不让任何人知道，没和任何人告别，就决定要前往自己不存在的世界。在得出结论之前，到底经历了多少思想斗争呢？质疑了多少次，迷茫了多少次呢？如果说这就是她经历过这些而得出的结论——我没有阻止的权利。我无法阻止她。  
+斩钉截铁地扔下结论，红莉栖转过身去。存在于她的背影中的，是无可动摇的意志，是决意。我想起了刚来到这条世界线时候，一直伫立在那里的红莉栖。现在想起来，她站在电话微波炉（暂定）面前之时，就已经下定决心了。不让任何人知道，没和任何人告别，就决定要前往自己不存在的世界。在得出结论之前，到底经历了多少思想斗争呢？质疑了多少次，迷茫了多少次呢？如果说这就是她经历过这些而得出的结论——我没有阻止的权利。我无法阻止她。  
 “呐，冈部，在梦醒之前，我想做一个约定。”  
 “约定？”  
 “到达β世界线以后，请忘了我吧。”  
