--- a/steins_gate_0/docs/0079.md
+++ b/steins_gate_0/docs/0079.md
@@ -95,7 +95,7 @@ My Spoon——这个奇怪的关键词，以前也有听到过。一般来说，
 “……哈？”  
 在之前的世界线里，比屋定——准确地说应该是翻译自雷斯吉宁教授——在研讨会上这样说过。我也通过亲身经历了解过。将人的记忆数据化，进行时间跳跃以后，移植进同一个人脑中，让人“想起来”的装置也是存在的。虽然这个装置在这条世界线里不存在。我曾经所在的世界线里，那个装置，就是在这个房间内被开发出来的。我自己，无数次使用过那个装置了。因为亲身体验过，我才会有这种想法——一个极其恐怖的想法，也是另外一种能说明篝的状态的假说。  
 “到底在说什么……”  
-“会带着自用勺子的人，是红莉栖……  
+“有My Spoon的人，是红莉栖……  
  在大学称呼比屋定为‘前辈’的人，只有红莉栖；  
  ‘栗悟饭和龟派气功波’，是红莉栖在@ch上使用的网名，这件事除了她本人，就只有我知道了；  
  红莉栖她，知道关于维克多·孔多利亚大学的事情，也知道小白鼠实验的事情；  
