【脑科学综合研究机构·日本办公室准备室】-->【脑科学综合研究机构·日本办公室&准备室】

--- a/steins_gate_0/docs/0059.md
+++ b/steins_gate_0/docs/0059.md
@@ -2,7 +2,7 @@
 > 1.064750  
 > [ 2010/12/20 ] 真帆被神秘人袭击，打电话给冈伦求助。萌郁调查到有其他人也在找篝。  
 
-【琦玉县和光市，脑科学综合研究机构·日本办公室准备室】  
+【琦玉县和光市，脑科学综合研究机构·日本办公室&准备室】  
 
 这天，比屋定真帆拼命忍着哈欠，结果并没有忍住，张得大大的嘴巴占据了她娇小脸庞的一半。  
 “呼啊~~”  
