--- a/steins_gate_0/docs/0005.md
+++ b/steins_gate_0/docs/0005.md
@@ -5,7 +5,7 @@
 ATF上的派对结束以后已经过了几天。
 
 从池袋开始急行10分钟，然后从堉玉县的和光市站坐10分钟的巴士。在独立行政法人“理化学研究所”旁边不远的地方建造的大楼二楼，就是目的地了。  
-【脑科学综合研究机构·日本办公室准备室】  
+【脑科学综合研究机构·日本办公室&准备室】  
 入口处的牌子上是这么写的。  
 不单单是要用三种特殊钥匙解锁，最后还得用上安全卡，好不容易算是进来了。  
 “这里是？”  
