--- a/steins_gate_0/docs/0044.md
+++ b/steins_gate_0/docs/0044.md
@@ -2,7 +2,7 @@
 > 1.129954  
 > [ 2011/07/06 ] 冈伦告知真帆（洗脑）真相，所有情报泄露。  
 
-位于和光市的【脑科学综合研究机构·日本办公室准备室】与半年前相比没有任何变化。还是一样大得离谱，空空荡荡的，摆放着许多没有人使用的办公桌。桌面上的灰尘……好像比之前更厚。半年前，雷斯吉宁教授他们从这里搬走之后，这里一直没有其他人使用了吧。  
+位于和光市的【脑科学综合研究机构·日本办公室&准备室】与半年前相比没有任何变化。还是一样大得离谱，空空荡荡的，摆放着许多没有人使用的办公桌。桌面上的灰尘……好像比之前更厚。半年前，雷斯吉宁教授他们从这里搬走之后，这里一直没有其他人使用了吧。  
 “特地把你叫过来真是不好意思啊，*Rintaro*。”  
 “啊，没什么。”  
 登录『Amadeus』的APP需要更新为最新版本，因此我在大学的课结束后赶到了这间办公室。现在，真帆正为了更新而将我的智能手机连上数据线，用PC操作着。说是差不多10分钟就能完成更新了，于是就发着呆等着。  
