--- a/steins_gate_0/docs/0035.md
+++ b/steins_gate_0/docs/0035.md
@@ -45,11 +45,11 @@
 “哦……”  
 话虽如此，哪些是真话哪些是假话，很可疑。  
 
-这个时候，口袋里的手机突然响了起来，查看发现是“红莉栖”的来电。比屋定满脸犹豫的表情。接下来要谈的话题，尽可能不想让“红莉栖”知道。我也不知道该怎么办。而且——我突然想到，在那条我迷茫地漂泊在战争时期一个多月的世界线里，我最终见到的“红莉栖”——『Amadeus』——处于美军的管理之下。然后世界线就发生了变动。那究竟代表着什么，我现在还没有找到答案。  
+这个时候，口袋里的手机突然响了起来，查看发现是“红莉栖”的来电。比屋定看到了显得有些犹豫，接下来要谈的话题，尽可能不想让“红莉栖”知道，我也在纠结该怎么办。而且——我突然想到，在那条我迷茫地漂泊在战争时期一个多月的世界线里，我最终见到的“红莉栖”——『Amadeus』——正处于美军的管理之下，然后世界线就发生了变动。那究竟代表着什么，我现在还没有找到答案。  
 
 我注视着手机屏幕，  
-是**现在接电话**，  
-还是**先和桶子谈完**呢？
+是要**接起电话**，  
+还是**先谈事情**呢？  
 
 
 <br/>
@@ -57,5 +57,5 @@
 > (to be continued)
 ---
 
-| [←prev](./0034) | [home](../../) | [next→接电话  ](./0036) |  
-|                 |                | [next→不接电话](./t0036-2) |
+| [←prev](./0034) | [home](../../) | [next→接起电话](./0036) |  
+|                 |                | [next→先谈事情](./t0036-2) |
