--- a/steins_gate_0/docs/0073.md
+++ b/steins_gate_0/docs/0073.md
@@ -1,6 +1,6 @@
 > <big> **轨道秩序的日蚀 - 11** </big>  
 > 1.064750  
-> [ 2011/01/02 ] 众人聚集商量对策。由季还要继续打工，被冈伦发现左手手腕受伤。冈伦怀疑K6205与莫扎特有关。『Amadeus』疑似被挟持，冈伦接到“红莉栖”电话引发跳线。  
+> [ 2011/01/02 ] 众人聚集商量对策。由季还要继续打工，被冈伦发现左手手腕受伤。冈伦怀疑K6205与莫扎特有关。联系真帆发现『Amadeus』疑似被挟持。这时冈伦接到“红莉栖”电话。P3：是否接起电话。  
 
 “啊，终于来了喵，冈伦。”  
 从显像管工作室径直回到LAB，几乎所有昨天在的人都聚集了起来。只有比屋定因为『Amadeus』发生的问题，好像没办法离开，不在这里。  
@@ -131,20 +131,20 @@
 “她说『Amadeus』好像被谁劫持了……”  
 “被劫持了吗——”  
 “本来想着能不能找到和莫扎特的联系的……”  
-现在还没有任何线索啊……无数可疑事情的碎片，在我的周围散开。我有种感觉，如果把那些碎片一片一片收集起来，连在一起的话，应该会找出答案的吧。比如说——阿万音由季左腕的伤。那个预示着什么呢……  
+现在还没有任何线索啊……无数可疑事情的碎片，在我的周围散开。我有种感觉，如果把那些碎片一片一片收集起来，连在一起的话，应该会找出答案的吧。比如说——阿万音由季左腕的伤。那又预示着什么呢……  
 
 “这是……？”  
-在结束了跟比屋定的通话，正准备将手机放回口袋的时候，电话铃声响了起来。是不是比屋定要补充什么……这么想着我看到了来点人的名字，愣住了。  
-“喂……”  
-“……救救我！”  
-“‘红莉栖’！？”  
-“救救我……冈部……！”  
-在这个瞬间——一阵激烈的眩晕向我袭来，世界被黑暗笼罩。
-
+在结束了跟比屋定的通话，正准备将手机放回口袋的时候，电话铃声响了起来。是不是比屋定要补充什么……？这么想着我看到了来电人的名字，愣住了。  
+“冈伦，谁打来的电话？”  
+我无法回答这个问题，只是死死地盯着画面。来电铃声还在不断响着。到底是怎么一回事？应该被劫持了的『Amadeus』为什么会打给我？难道是什么陷阱吗？  
+是要**再想一下**呢，  
+还是**接起电话**呢？  
 
 <br/>
 
 > (to be continued)
 ---
 
-| [←prev](./0072) | [home](../../) | [next→](./0074) |
+| [←prev](./0072) | [home](../../) | [next→再想一下](./0074) |  
+|                 |                | [next→接起电话](./o0074) |
+
