change symbol of companies

--- a/steins_gate_0/docs/0058.md
+++ b/steins_gate_0/docs/0058.md
@@ -25,7 +25,7 @@
 
 ![](../pics/0058-1.png)
 
-她安静地递过来名片，上面写着<abbr title="（虚构）位于秋叶原的编辑出版社。主要业务是撰写PC系列杂志的文章等。">「Arc Rewrite」</abbr>会社的名字。桶子简短地向她介绍了我和铃羽。  
+她安静地递过来名片，上面写着<abbr title="（虚构）位于秋叶原的编辑出版社。主要业务是撰写PC系列杂志的文章等。">【Arc Rewrite】</abbr>会社的名字。桶子简短地向她介绍了我和铃羽。  
 “呐，桶子，你为什么……认识这个人？”  
 “之前，桐生氏负责的杂志在制作有关于秋叶原都市传说的特刊。  
  当时她联系我说想就我的工作进行采访。  
